[package]
name = "alloy-reth"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { version = "0.7.0", features = ["serde"] }
alloy-provider = { git = "https://github.com/alloy-rs/alloy", rev = "39b8695", default-features = false }
alloy-transport = { git = "https://github.com/alloy-rs/alloy", rev = "39b8695" }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", rev = "39b8695" }

reth-provider = { git = "https://github.com/paradigmxyz/reth", package = "reth-provider" }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc" }
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-api" }
reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-builder" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", package = "reth-evm-ethereum" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", package = "reth-transaction-pool" }
reth-network-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-network-api" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", package = "reth-primitives" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", package = "reth-tasks" }

reth-db = { git = "https://github.com/paradigmxyz/reth", package = "reth-db", optional = true }
reth-blockchain-tree = { git = "https://github.com/paradigmxyz/reth", package = "reth-blockchain-tree", optional = true }

reth-exex = { git = "https://github.com/paradigmxyz/reth", package = "reth-exex", optional = true }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-node-api", optional = true }

tokio = { version = "1.37.0", default-features = false }
async-trait = "0.1.80"
eyre = "0.6.12"

[features]
default = []
db = ["dep:reth-db", "dep:reth-blockchain-tree"]
exex = ["dep:reth-exex", "dep:reth-node-api"]
