[package]
name = "alloy-reth"
version = "0.1.0"
edition = "2021"

[dependencies]
# todo: bump rev when we bump reth
alloy-primitives = { version = "0.7.0", features = ["serde"] }
alloy-provider = { git = "https://github.com/alloy-rs/alloy", default-features = false, rev = "39b8695" }
alloy-transport = { git = "https://github.com/alloy-rs/alloy", rev = "39b8695" }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", rev = "39b8695" }

reth-provider = { git = "https://github.com/paradigmxyz/reth", package = "reth-provider", tag = "v0.2.0-beta.6" }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc", tag = "v0.2.0-beta.6" }
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-api", tag = "v0.2.0-beta.6" }
reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-builder", tag = "v0.2.0-beta.6" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", package = "reth-evm-ethereum", tag = "v0.2.0-beta.6" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", package = "reth-transaction-pool", tag = "v0.2.0-beta.6" }
reth-network-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-network-api", tag = "v0.2.0-beta.6" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", package = "reth-primitives", tag = "v0.2.0-beta.6" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", package = "reth-tasks", tag = "v0.2.0-beta.6" }

reth-db = { git = "https://github.com/paradigmxyz/reth", package = "reth-db", tag = "v0.2.0-beta.6", optional = true }
reth-blockchain-tree = { git = "https://github.com/paradigmxyz/reth", package = "reth-blockchain-tree", tag = "v0.2.0-beta.6", optional = true }

reth-exex = { git = "https://github.com/paradigmxyz/reth", package = "reth-exex", tag = "v0.2.0-beta.6", optional = true }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-node-api", tag = "v0.2.0-beta.6", optional = true }

tokio = { version = "1.37.0", default-features = false }
async-trait = "0.1.80"
eyre = "0.6.12"

[features]
default = []
db = ["dep:reth-db", "dep:reth-blockchain-tree"]
exex = ["dep:reth-exex", "dep:reth-node-api"]
